Change in footer note

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; 2022 Smartidly India. All right reserved</p>
+            <p class="footer__copy">&#169; 2022 Hotel Kattabomman. All right reserved</p>
         </footer>
 
         <!--========== SCROLL REVEAL ==========-->
